--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,10 @@
 .login-container{
+    margin-top: 200px;
+    padding-top: 100px;
+    
+}
+.form-container{
     margin-top: 100px;
-    padding: 100px 100px;
 }
 .Login-section{
     display: flex;
