--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,8 +2,15 @@
     background-image: url("../../image/hridoy-footer.jpg");
     background-position: cover;
     background-repeat: no-repeat;
-   height: 550px;
+   height: 400px;
    width: 100%;
   
 
+}
+.contact-container{
+    font-size: 20px;
+    line-height: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+    margin-top: 2px;
 }
